<resources>
    <string name="app_name">PasswordManager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="premium_safeguard">Premium Safeguard</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="get_a_new_password">Get a new password</string>
    <string name="create_account">Create Account</string>
    <string name="copy">Copy</string>
    <string name="_8">8</string>
    <string name="choose_the_password_content">Choose the password Content:</string>
    <string name="lower_case">Lower Case</string>
    <string name="upper_case">Upper Case</string>
    <string name="numeric_value">Numeric Value</string>
    <string name="special_chars">Special Chars</string>
    <string name="password_size">Password Size</string>
    <string name="generate">Generate</string>
    <string name="enter_name">Enter Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_generator">Password generator</string>
    <string name="generate_a_new_and_secure_password">Generate a new and secure password</string>
    <string name="search_password">Search password</string>
    <string name="search_and_filter_all_passwords">Search and filter all passwords</string>
    <string name="title_activity_search_pass">SearchPassActivity</string>
    <string name="risk_factors">Risk factors</string>
    <string name="offers_suggestions_for_improving_security">Offers suggestions for improving security</string>
    <string name="enter_code" />
    <string name="all_passwords">All passwords</string>
    <string name="enter_email_ex_someone_example_com">Enter Email (ex:someone@example.com)</string>
    <string name="view_all_securely_stored_passwords">View all securely stored passwords</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="add_password">Add password</string>
    <string name="current_location">Current location</string>
    <string name="username">Username</string>
    <string name="add_site_to_database">Add Site to Database</string>
    <string name="site_name">Site Name</string>
    <string name="add_site">Add Site</string>
</resources>