<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#ffffff"
    tools:context=".CRUD.UpdatePassword">

    <TextView
        android:id="@+id/titleTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Site from Database"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/siteNameInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView1"
        android:layout_marginTop="16dp"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/siteNameEditText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/site_name"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/siteNameInputLayout1"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="#009688"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameInputLayout1"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="#009688"
        app:boxStrokeWidth="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInputLayout1"
        android:layout_marginTop="24dp"
        android:text="Update Site"
        android:textColor="#003300"
        android:backgroundTint="#00cc66"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Back"
        android:textColor="#003300"
        android:layout_below="@id/updateButton"
        app:cornerRadius="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00cc66"
        app:icon="@drawable/goback"
        app:iconTint="@color/black" />

</RelativeLayout>